--- a/about/about.css
+++ b/about/about.css
@@ -1,17 +1,21 @@
 * {
 	scroll-behavior: smooth;
+    padding: 0%;
+    margin: 0%;
 }
+
 .section1 {
 	position: relative;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background: url("https://charaklive.b-cdn.net/wp-content/uploads/2021/07/Academics.jpg") center/cover;
+	background: url(./img/about.jpg) center/cover;
 	background-attachment: fixed;
 	width: 100%;
 	height: 65vh;
 	min-height: 386px;
 }
+
 .section1::after {
 	content: "";
 	position: absolute;
@@ -19,16 +23,106 @@
 	left: 0;
 	height: 100%;
 	width: 100%;
-	background: rgba(255, 255, 255, 0.048);
-
-	z-index: 0;
+	background: rgba(0, 0, 0, 0.233);
+	z-index: 1;
 }
 
 .title {
 	margin-top: 6.5rem;
-	outline: 5px solid #af7737;
+	outline: 5px solid #2733df;
 	padding: 4rem 6rem 4rem 6rem;
-	color: #af7737;
+	color: #2733df;
+    position: absolute;
 	font-size: 2rem;
 	z-index: 2;
 }
+
+.content-top
+{
+	padding: 9%;
+	font-size: 25px;
+	text-align: justify;
+	background: url(./img/bg1.jpg) center/cover;
+	position: relative;
+}
+.content-top::after
+{
+	content: " ";
+	position: absolute;
+	top: 0;
+	left: 0;
+	backdrop-filter: blur(10px);
+	background-color: rgba(0, 0, 0, 0.336);
+	height: 100%;
+	width: 100%;
+	z-index: 0;
+}
+.content-top p
+{
+	position: relative;
+	z-index: 1;
+	color: #fff;
+}
+
+.content-middle h2 
+{
+	text-align: center;
+	z-index: 2;
+	margin: 2%;
+}
+
+.content-middle h3
+{
+	text-align: center;
+}
+
+.content-middle p
+{
+	text-indent: 50px;
+	text-align: justify;
+}
+/* chairman */
+
+.chairman , .vice-chairman , .principal
+{
+	position: relative;
+	padding: 9%;
+	height: 100vh;
+	font-size: 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	background: url(./img/bg2.jpg) center/cover;
+	color: #fff;
+	z-index: 2;
+}
+.vice-chairman
+{
+	background: url(./img/bg3.jpg) center/cover;
+}
+.principal
+{
+	background: url(./img/bg4.jpg) center/cover;
+}
+
+.chairman p , .chairman h2 , .chairman h3 , .vice-chairman p , .vice-chairman h2 , .vice-chairman h3 , .principal p , .principal h2 , .principal h3 , .principal ul
+{
+	z-index: 2;
+	position: relative;
+}
+
+.chairman::after , .vice-chairman::after , .principal::after
+{
+	content: " ";
+	position: absolute;
+	top: 0;
+	left: 0;
+	backdrop-filter: blur(8px);
+	background-color: rgba(0, 0, 0, 0.336);
+	height: 100%;
+	width: 100%;
+	z-index: 0;
+}
+/* chairman-ends */
+
