--- a/common/nav/nav.css
+++ b/common/nav/nav.css
@@ -1,6 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
 	--theme: #4585d9;
@@ -13,10 +11,11 @@
 	box-sizing: border-box;
 	user-select: none;
 	-webkit-user-drag: none;
+	font-family: 'Raleway', sans-serif;
 }
 
-body {
-	font-family: 'Montserrat', sans-serif;
+h1,h2,h3,h4,h5,h6{
+	font-family: 'Oswald', sans-serif;
 }
 
 header {
@@ -152,7 +151,11 @@ header {
 	color: white;
 	text-align: center;
 	width: 100%;
+	font-family: 'Oswald', sans-serif;
 	transition: all .3s ease-in-out;
+	letter-spacing: 1px;
+	font-weight: 100;
+	font-weight: 400;
 }
 
 .bottom-nav li {
