--- a/home/home.css
+++ b/home/home.css
@@ -86,16 +86,22 @@
 	top: 55%;
 	left: 65%;
 	width: fit-content;
-	font-size: 33px;
-	font-weight: 600;
-	letter-spacing: 1px;
+	height: 115px;
 	z-index: 3;
-	line-height: 45px;
+	line-height: 40px;
 	transform: translate(-50%, -50%);
 	transition: all 0.5s ease-in-out;
 	overflow: hidden;
 	color: white;
-	text-shadow: 2px 2px 15px rgba(255, 255, 255, 1);
+	text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.5);
+}
+
+.hero-content span {
+	font-family: 'Oswald', sans-serif;
+	font-weight: 600;
+	letter-spacing: 1px;
+	word-spacing: 3px;
+	font-size: 2.5rem;
 }
 
 .SHK-aviation {
@@ -175,7 +181,7 @@
 	width: 100%;
 	height: 100%;
 	content: '';
-	background-color: rgba(0, 0, 0, 0.3);
+	background-color: rgba(0, 0, 0, 0.5);
 }
 
 .swiper-slide h1 {
@@ -220,6 +226,19 @@
 
 .slide-h1 {
 	overflow: hidden;
+}
+
+.slide-h1 span {
+	font-family: 'Playfair Display', serif;
+	font-style: italic;
+	font-size: 2rem;
+	letter-spacing: 1px;
+}
+
+#author {
+	font-family: 'Oswald', sans-serif;
+	letter-spacing: 2px;
+	font-weight: 100;
 }
 
 .vision-and-mission {
@@ -462,9 +481,9 @@
 	position: absolute;
 	width: 100%;
 	top: 0;
-	right: -27.5rem;
+	right: 0;
 	box-shadow: 2px 2px 15px black;
-	transform: rotate(310deg);
+	clip-path: polygon(70% 0%, 100% 0%, 100% 100%, 9% 100%);
 	height: 152%;
 	z-index: 1;
 	overflow: hidden;
@@ -474,9 +493,9 @@
 	position: absolute;
 	width: 100%;
 	top: 0;
-	left: -29rem;
+	left: 0;
 	box-shadow: 2px 2px 15px black;
-	transform: rotate(51.5deg);
+	clip-path: polygon(0 0, 30% 0, 100% 115%, 0px 100%);
 	height: 152%;
 	z-index: 1;
 	overflow: hidden;
@@ -485,42 +504,41 @@
 	position: absolute;
 	width: 100%;
 	top: 0;
-	left: -27.5rem;
+	left: 0;
 	box-shadow: 2px 2px 15px black;
-	transform: rotate(48deg);
-	height: 152%;
+	height: 130%;
 	z-index: 1;
+	clip-path: polygon(0 0, 30% 0, 65% 100%, 0 100%);
 	overflow: hidden;
 }
 
 .contact-aside::after {
 	position: absolute;
-	width: 100%;
-	height: 100%;
+	background: url(https://jooinn.com/images/airplane-37.jpg) no-repeat;
+	width: 145%;
+	height: 130%;
 	content: '';
-	background: url(https://jooinn.com/images/airplane-37.jpg);
-	transform: rotate(312deg);
 	background-size: cover;
-	background-position: -42rem -9rem;
+    background-position: -80rem -10rem;
 	z-index: 1;
 }
 
 .SHK-heads-aside::after {
 	position: absolute;
-	width: 100%;
+	background: var(--theme);
+	width: 145%;
 	height: 100%;
 	content: '';
-	background-color: var(--theme);
 	z-index: 1;
 }
 
 .vision-mission-aside::after {
 	position: absolute;
-	width: 100%;
+	width: 145%;
 	height: 100%;
 	content: '';
-	background-color: #8ecae6;
 	z-index: 1;
+	background-color: #8ecae6;
 }
 
 .input {
@@ -539,8 +557,8 @@
 }
 
 .input:nth-of-type(1) {
-	left: 18rem;
-	padding-left: 17rem;
+	left: 18%;
+	padding-left: 14%;
 }
 
 .input:nth-of-type(1):hover,
@@ -551,7 +569,7 @@
 
 .input:nth-of-type(2) {
 	left: 23rem;
-	padding-left: 17rem;
+	padding-left: 14%;
 }
 
 .input:nth-of-type(2):hover,
@@ -562,7 +580,7 @@
 
 .input:nth-of-type(3) {
 	left: 28rem;
-	padding-left: 17rem;
+	padding-left: 14%;
 }
 
 .input:nth-of-type(3):hover,
@@ -623,12 +641,9 @@
 	.mission {
 		right: 9%;
 	}
-	.contact-aside {
-		left: -27rem;
-	}
-
+/* 
 	.input:nth-of-type(1) {
-		left: 18rem;
+		left: 18%;
 		padding-left: 11rem;
 	}
 
@@ -659,7 +674,7 @@
 		left: 36rem;
 		padding-left: 10rem;
 		width: 35%;
-	}
+	} */
 }
 
 @media (max-width: 1050px) {
@@ -673,9 +688,7 @@
 	.vision {
 		left: 5% !important;
 	}
-	.contact-aside {
-		left: -26rem !important;
-	}
+/* 
 	.input:nth-of-type(1) {
 		left: 13rem !important;
 		padding-left: 5rem !important;
@@ -708,7 +721,7 @@
 		left: 36rem;
 		padding-left: 10rem;
 		width: 40% !important;
-	}
+	} */
 }
 
 @media (max-width: 950px) {
@@ -756,7 +769,7 @@
 }
 
 @media (max-width: 1500px) {
-	.input:nth-of-type(1) {
+	/* .input:nth-of-type(1) {
 		left: 13rem !important;
 		padding-left: 15rem !important;
 	}
@@ -788,11 +801,8 @@
 		left: 36rem;
 		padding-left: 10rem;
 		width: 40% !important;
-	}
+	} */
 
-	.vision-mission-aside {
-		left: -21.5rem;
-	}
 }
 
 @media (max-width: 900px) {
