--- a/home/home.css
+++ b/home/home.css
@@ -158,7 +158,7 @@
 
 .swiper-slide {
 	text-align: center;
-	font-size: 18px;
+	font-size: 23px;
 	background: #fff;
 	display: -webkit-box;
 	display: -ms-flexbox;
@@ -508,7 +508,7 @@
 	box-shadow: 2px 2px 15px black;
 	height: 130%;
 	z-index: 1;
-	clip-path: polygon(0 0, 30% 0, 65% 100%, 0 100%);
+	clip-path: polygon(0 0, 30% 0, 85% 100%, 0 100%);
 	overflow: hidden;
 }
 
@@ -519,7 +519,7 @@
 	height: 130%;
 	content: '';
 	background-size: cover;
-    background-position: -80rem -10rem;
+	background-position: -80rem -10rem;
 	z-index: 1;
 }
 
@@ -557,36 +557,36 @@
 }
 
 .input:nth-of-type(1) {
-	left: 18%;
+	left: 23%;
 	padding-left: 14%;
 }
 
 .input:nth-of-type(1):hover,
 .input:nth-of-type(1):focus {
-	left: 30rem;
-	padding-left: 5rem;
+	left: 30%;
+	padding-left: 7%;
 }
 
 .input:nth-of-type(2) {
-	left: 23rem;
-	padding-left: 14%;
+	left: 28%;
+	padding-left: 16%;
 }
 
 .input:nth-of-type(2):hover,
 .input:nth-of-type(2):focus {
-	left: 30rem;
-	padding-left: 11rem;
+	left: 35%;
+	padding-left: 9%;
 }
 
 .input:nth-of-type(3) {
-	left: 28rem;
-	padding-left: 14%;
+	left: 32%;
+	padding-left: 19%;
 }
 
 .input:nth-of-type(3):hover,
 .input:nth-of-type(3):focus {
-	left: 36rem;
-	padding-left: 10rem;
+	left: 41%;
+	padding-left: 10%;
 	width: 35%;
 }
 
@@ -634,94 +634,10 @@
 	color: white;
 }
 
-@media (max-width: 1350px) {
-	.vision {
-		left: 9%;
-	}
-	.mission {
-		right: 9%;
-	}
-/* 
-	.input:nth-of-type(1) {
-		left: 18%;
-		padding-left: 11rem;
-	}
-
-	.input:nth-of-type(1):hover,
-	.input:nth-of-type(1):focus {
-		left: 30rem;
-		padding-left: 5rem;
-	}
-
-	.input:nth-of-type(2) {
-		left: 23rem;
-		padding-left: 11rem;
-	}
-
-	.input:nth-of-type(2):hover,
-	.input:nth-of-type(2):focus {
-		left: 30rem;
-		padding-left: 11rem;
-	}
-
-	.input:nth-of-type(3) {
-		left: 28rem;
-		padding-left: 11rem;
-	}
-
-	.input:nth-of-type(3):hover,
-	.input:nth-of-type(3):focus {
-		left: 36rem;
-		padding-left: 10rem;
-		width: 35%;
-	} */
-}
-
 @media (max-width: 1050px) {
 	.hero .plane-hero {
 		left: 9%;
 	}
-	.mission {
-		right: 5% !important;
-	}
-
-	.vision {
-		left: 5% !important;
-	}
-/* 
-	.input:nth-of-type(1) {
-		left: 13rem !important;
-		padding-left: 5rem !important;
-	}
-
-	.input:nth-of-type(1):hover,
-	.input:nth-of-type(1):focus {
-		left: 30rem;
-		padding-left: 5rem;
-	}
-
-	.input:nth-of-type(2) {
-		left: 17rem !important;
-		padding-left: 6rem !important;
-	}
-
-	.input:nth-of-type(2):hover,
-	.input:nth-of-type(2):focus {
-		left: 30rem;
-		padding-left: 11rem;
-	}
-
-	.input:nth-of-type(3) {
-		left: 22rem !important;
-		padding-left: 7rem !important;
-	}
-
-	.input:nth-of-type(3):hover,
-	.input:nth-of-type(3):focus {
-		left: 36rem;
-		padding-left: 10rem;
-		width: 40% !important;
-	} */
 }
 
 @media (max-width: 950px) {
@@ -768,43 +684,6 @@
 	}
 }
 
-@media (max-width: 1500px) {
-	/* .input:nth-of-type(1) {
-		left: 13rem !important;
-		padding-left: 15rem !important;
-	}
-
-	.input:nth-of-type(1):hover,
-	.input:nth-of-type(1):focus {
-		left: 30rem;
-		padding-left: 21rem;
-	}
-
-	.input:nth-of-type(2) {
-		left: 17rem !important;
-		padding-left: 16rem !important;
-	}
-
-	.input:nth-of-type(2):hover,
-	.input:nth-of-type(2):focus {
-		left: 30rem;
-		padding-left: 21rem;
-	}
-
-	.input:nth-of-type(3) {
-		left: 22rem !important;
-		padding-left: 16rem !important;
-	}
-
-	.input:nth-of-type(3):hover,
-	.input:nth-of-type(3):focus {
-		left: 36rem;
-		padding-left: 10rem;
-		width: 40% !important;
-	} */
-
-}
-
 @media (max-width: 900px) {
 	.hero .plane-hero {
 		display: none;
@@ -837,6 +716,14 @@
 		z-index: 4;
 	}
 
+	.SHK-heads-aside {
+		clip-path: polygon(50% 0%, 100% 0%, 100% 100%, 50% 100%);
+	}
+
+	.vision-mission-aside {
+		clip-path: polygon(50% 0%, 100% 0%, 100% 100%, 50% 100%);
+	}
+
 	.vision-and-mission {
 		flex-direction: column;
 		justify-content: space-around;
@@ -846,16 +733,16 @@
 
 	.vision {
 		width: 100%;
-		left: 0 !important;
 		position: relative;
-		padding-bottom: 25%;
+		z-index: 1;
+		right: 0;
 	}
 
 	.mission {
-		right: 0 !important;
 		position: relative;
 		width: 100%;
 		padding: 7% 0 0 0;
+		left: 0;
 	}
 
 	.mission-ul li {
