--- a/home/home.css
+++ b/home/home.css
@@ -603,13 +603,13 @@
 	border: none;
 	transition: all 0.5s ease-in-out;
 	box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3), -1px -1px 20px rgba(0, 0, 0, 0.3);
-	left: -10rem;
+	left: -100%;
 }
 
 .submit,
 .next-submit {
 	position: relative;
-	left: 0rem;
+	left: 100%;
 	border-radius: 10px;
 	width: 10rem;
 	height: 2.5rem;
@@ -724,65 +724,12 @@
 		clip-path: polygon(50% 0%, 100% 0%, 100% 100%, 50% 100%);
 	}
 
-	.vision-and-mission {
-		flex-direction: column;
-		justify-content: space-around;
-		padding: 10% !important;
-		height: fit-content !important;
-	}
-
-	.vision {
-		width: 100%;
-		position: relative;
-		z-index: 1;
-		right: 0;
-	}
-
-	.mission {
-		position: relative;
-		width: 100%;
-		padding: 7% 0 0 0;
-		left: 0;
-	}
-
-	.mission-ul li {
-		margin-bottom: 2%;
-	}
-
-	.SHK-heads {
-		background: linear-gradient(0deg, #ade8f4 45%, #f1faee 0%) !important;
-		height: 125vh;
-		display: flex;
-		justify-content: space-between;
-		padding: 4rem;
-	}
-
-	.SHK-heads-aside {
-		display: none !important;
-	}
-
-	.SHK-heads > div {
-		flex-direction: column;
-	}
-
-	.heads + div {
-		width: 100%;
-		margin: 5% 0;
+	.heads-pos div {
+		width: 80%;
 	}
 
 	.heads {
-		width: 100%;
-	}
-
-	.heads-pos {
-		display: grid;
-		grid-template-columns: 1fr 1fr 1fr;
-		row-gap: 5%;
-		column-gap: 5%;
-	}
-
-	.heads-pos div {
-		height: fit-content;
+		left: 5%;
 	}
 
 	.contact-aside {
@@ -849,5 +796,104 @@
 	}
 }
 
-@media (max-width: 450px) {
+@media screen and (max-width: 800px) {
+	.vision-mission-aside {
+		clip-path: polygon(0 0, 50% 0, 50% 100%, 0% 100%);
+		transform: rotate(90deg);
+		position: relative;
+		bottom: 0;
+	}
+}
+
+@media (max-width: 1500px) {
+	.SHK-heads-aside {
+		clip-path: polygon(65% 0%, 100% 0%, 100% 100%, 25% 100%);
+	}
+
+	.contact-aside {
+		clip-path: polygon(0 0, 39% 0, 75% 100%, 0 100%);
+	}
+
+	.vision-mission-aside {
+		clip-path: polygon(0 0, 35% 0, 100% 143%, 0px 100%);
+	}
+}
+
+@media (max-width: 1200px) {
+	.vision-mission-aside,
+	.SHK-heads-aside {
+		clip-path: polygon(0 0, 50% 0, 50% 100%, 0% 100%);
+	}
+
+	.vision {
+		right: 10%;
+	}
+	.mission {
+		left: 10%;
+	}
+
+	.contact-sec {
+		background: url(https://jooinn.com/images/airplane-37.jpg) no-repeat
+			center/cover;
+	}
+
+	form {
+		z-index: 1;
+	}
+
+	.contact-title {
+		z-index: 1;
+		color: white;
+	}
+
+	.heads {
+		z-index: 1;
+		width: 20rem;
+		left: 7%;
+		position: relative;
+	}
+
+	.heads + div {
+		width: 38%;
+		right: 6%;
+	}
+
+	.SHK-heads {
+		padding: 4rem 0rem;
+	}
+
+	.contact-sec::after {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		content: '';
+		background-color: rgba(0, 0, 0, 0.2);
+	}
+
+	.contact-aside {
+		display: none;
+	}
+
+	.input {
+		position: relative !important;
+		left: 50%;
+		transform: translateX(-50%) !important;
+		margin: 2rem 0 !important;
+		padding: 1rem !important;
+		width: 50% !important;
+	}
+	.input:nth-of-type(1),
+	.input:nth-of-type(1):hover,
+	.input:nth-of-type(1):focus,
+	.input:nth-of-type(2),
+	.input:nth-of-type(2):hover,
+	.input:nth-of-type(2):focus,
+	.input:nth-of-type(3),
+	.input:nth-of-type(3):hover,
+	.input:nth-of-type(3):focus {
+		left: 50%;
+		padding-left: 1rem !important;
+	}
 }
