--- a/activities/activities.css
+++ b/activities/activities.css
@@ -10,7 +10,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-
 	background: url('http://cdn.shopify.com/s/files/1/0510/8560/7099/files/The_Best_Laptop_Choice_for_College_Students-2.jpg?v=1620704757')
 		top/contain;
 	background-attachment: fixed;
@@ -18,13 +17,7 @@
 	height: 70vh;
 	min-height: 386px;
 }
-/* .headerActivities::after {
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background-color: rgb(231, 231, 231);
-} */
+
 .headerActivities::after {
 	content: '';
 	position: absolute;
@@ -46,57 +39,10 @@
 	outline: 5px solid #c8e7f2;
 	padding: 5rem 8rem 5rem 8rem;
 	color: #c8e7f2;
-	/* background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEimpzTxmqtP3wVZ0RC71x3BlDSUbvk6jSRg&usqp=CAU')
-		bottom/cover no-repeat;
-	background-clip: text;
-	-webkit-background-clip: text;
-	-webkit-text-fill-color: transparent; */
+
 	font-size: 4rem;
 	z-index: 3;
-	/* border-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEimpzTxmqtP3wVZ0RC71x3BlDSUbvk6jSRg&usqp=CAU') */
-	/* 5 round; */
-	/* background-attachment: fixed; */
 }
-/* .section2 {
-	position: relative;
-	height: 30vh;
-	top: 4rem;
-   
-	display: grid;
-	grid-template-areas: 'box1 box2 box3';
-	text-align: center;
-	box-shadow: 5px 5px 50px 0px rgba(0, 0, 0, 0.3);
-	z-index: 2;
-	width: 95%;
-	margin-left: auto;
-	margin-right: auto;
-	
-	border-radius: 20px; 
-} */
-/* .box1 {
-	
-	grid-area: box1;
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	background: #03a285;
-}
-.box2 {
-	grid-area: box2;
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	background-color: #ddb60d;
-}
-.box3 {
-	grid-area: box3;
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	background-color: #2b3f52;
-
-} */
-
 .section3 {
 	position: relative;
 	height: 70vh;
@@ -138,8 +84,9 @@ h3 {
 	text-align: center;
 	font-weight: lighter;
 	display: flex;
+	flex-direction: column;
 	align-items: center;
-	justify-content: center;
+
 	font-family: sans-serif;
 	background-color: #334756;
 	color: rgb(240, 240, 240);
@@ -149,36 +96,54 @@ h3 {
 	grid-area: grid1;
 	height: 260px;
 	width: 260px;
-	/* background: #2C97DF; */
-	/* box-shadow: 5px 5px 50px 0px rgba(4, 134, 255,0.7); */
 }
 .grid2 {
 	grid-area: grid2;
 	height: 260px;
 	width: 260px;
-	/* background: #00A285; */
-	/* box-shadow: 5px 5px 50px 0px rgba(0, 112, 24, 0.7); */
 }
 .grid3 {
 	grid-area: grid3;
 	height: 260px;
 	width: 260px;
-	/* background: #DDB60D; */
-	/* box-shadow: 5px 5px 50px 0px rgba(192, 157, 0,0.7); */
 }
 .grid4 {
 	grid-area: grid4;
 	height: 260px;
 	width: 260px;
-	/* background: #C56B03; */
-	/* box-shadow: 5px 5px 50px 0px rgba(187, 100, 0, 0.7); */
+}
+.txt-course {
+	margin-top: 5rem;
+	margin-bottom: 2rem;
+}
+.btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-decoration: none;
+	width: 120px;
+	height: 40px;
+	font-size: 11px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-weight: 500;
+	color: #000;
+	background-color: #f5f7fb;
+	border: none;
+	border-radius: 20px;
+	box-shadow: 0px 8px 15px rgba(47, 47, 47, 0.2);
+	transition: all 0.3s ease 0s;
+	cursor: pointer;
+	outline: none;
+}
+.btn:hover {
+	background-color: #29cccc;
+	box-shadow: 0px 15px 20px rgba(37, 184, 171, 0.4);
+	color: #f5f7fb;
+	transform: translateY(-7px);
 }
 
-/* club  */
 .club {
-	/* height:max-content;
-	position: relative; */
-	
 	background-color: #f5f7fb;
 }
 .camptitle {
@@ -189,15 +154,14 @@ h3 {
 }
 .unopen {
 	position: relative;
-	
+
 	margin-top: 6rem;
-	/* left: 50%; */
-	/* transform: translateX(-55%); */
+
 	margin-right: auto;
 	margin-left: auto;
 	height: 400px;
 	width: 400px;
-	box-shadow: 0 70px 140px 0 rgba(130, 136, 171, 0.2);
+	box-shadow: 50px 70px 140px 0 rgba(130, 136, 171, 0.2);
 	border-radius: 20px;
 }
 
@@ -210,28 +174,30 @@ h3 {
 	border-radius: 20px;
 }
 .image1 {
-	background: url('https://akm-img-a-in.tosshub.com/indiatoday/images/story/201911/ncc-770x433.jpeg?DcwuTnfzNu27AZAisWdIacVhxH9gdlRE') top/cover;
+	background: url('https://akm-img-a-in.tosshub.com/indiatoday/images/story/201911/ncc-770x433.jpeg?DcwuTnfzNu27AZAisWdIacVhxH9gdlRE')
+		top/cover;
 }
 .image2 {
-	background: url('https://s3.ap-southeast-1.amazonaws.com/cdn.deccanchronicle.com/sites/default/files/nss%20cadets%20rday%20parade%20pti_0.jpg') top/cover;
+	background: url('https://s3.ap-southeast-1.amazonaws.com/cdn.deccanchronicle.com/sites/default/files/nss%20cadets%20rday%20parade%20pti_0.jpg')
+		top/cover;
 }
 .image3 {
-	background: url('https://s4.sathyainfo.com/s/2a3e418853024a4/img.jpeg') center/cover;
+	background: url('https://s4.sathyainfo.com/s/2a3e418853024a4/img.jpeg')
+		center/cover;
 }
 .clubContentCard {
 	position: absolute;
 	height: 100%;
 	width: 100%;
-	
+
 	border-radius: 20px 0px 0px 20px;
-	box-shadow: 0 70px 140px 0 rgba(130, 136, 171, 0.2);
-	
+	box-shadow: 50px 70px 140px 0 rgba(130, 136, 171, 0.2);
+	background-color: white;
 }
 .clubContentCard2 {
 	border-radius: 0px 20px 20px 0px;
 }
 .clubContent {
-	
 	margin-left: auto;
 	margin-right: auto;
 	height: 100%;
