--- a/home/home.css
+++ b/home/home.css
@@ -62,29 +62,23 @@
 	height: 60vh;
 	top: var(--nav-height);
 	align-content: center;
+	background: url(./img/hero_image.jpg);
+	background-size: cover;
+	background-position: 0 203rem;
 }
 
-.hero .plane-hero {
+.hero::after {
 	position: absolute;
-	z-index: 4;
-	left: 17%;
-	margin-top: 5rem;
-	height: 70%;
-	transition: all 0.5s ease-in-out;
-}
-
-.hero video {
 	width: 100%;
-	height: 70vh;
-	top: var(--nav-height);
-	position: fixed;
-	object-fit: cover;
+	height: 100%;
+	content: '';
+	background-color: rgba(0, 0, 0, 0.3);
 }
 
 .hero-content {
 	position: absolute;
 	top: 55%;
-	left: 65%;
+	left: 50%;
 	width: fit-content;
 	height: 7rem;
 	z-index: 3;
@@ -634,17 +628,7 @@
 	color: white;
 }
 
-@media (max-width: 1050px) {
-	.hero .plane-hero {
-		left: 9%;
-	}
-}
-
 @media (max-width: 950px) {
-	.hero .plane-hero {
-		left: 9%;
-	}
-
 	.hero-content {
 		font-size: 29px;
 	}
@@ -732,12 +716,6 @@
 }
 
 @media (max-width: 900px) {
-	.hero .plane-hero {
-		display: none;
-	}
-	.hero video {
-		display: none;
-	}
 	.hero {
 		background: url('https://media.architecturaldigest.com/photos/5988e603298aae66974b2d0d/2:1/w_3000,h_1500,c_limit/Pilotless%20Airplanes%201.jpg')
 			right/cover;
