--- a/home/home.css
+++ b/home/home.css
@@ -603,7 +603,7 @@
 .submit,
 .next-submit {
 	position: relative;
-	left: 100%;
+	left: -100%;
 	border-radius: 10px;
 	width: 10rem;
 	height: 2.5rem;
@@ -637,20 +637,6 @@
 @media (max-width: 750px) {
 	.heads-pos {
 		grid-template-columns: 1fr 1fr;
-	}
-}
-
-@media (max-width: 400px) {
-	.SHK-heads {
-		padding: 4rem 2rem;
-	}
-
-	.preload div {
-		height: 20%;
-	}
-
-	.preload img {
-		height: 100% !important;
 	}
 }
 
@@ -838,6 +824,10 @@
 	.vision-mission-aside {
 		clip-path: polygon(0 0, 35% 0, 100% 143%, 0px 100%);
 	}
+
+	.input:nth-of-type(1) {
+		left: 25%;
+	}
 }
 
 @media (max-width: 1200px) {
@@ -923,17 +913,42 @@
 	.vision-and-mission {
 		height: 135vh !important;
 	}
+	.slide-h1 {
+		top: 50%;
+		transform: translateY(-50%);
+		line-height: 2rem !important;
+	}
+
+	.slide-h1 span {
+		font-size: 1.5rem !important;
+	}
 }
 
 @media (max-width: 450px) {
 	.vision-and-mission {
 		height: 150vh !important;
 	}
+	.hero {
+		background: url(https://media.architecturaldigest.com/photos/5988e603298aae66974b2d0d/2:1/w_3000,h_1500,c_limit/Pilotless%20Airplanes%201.jpg);
+		background-size: cover;
+		background-position: -18rem 0;
+	}
 }
 
 @media (max-width: 400px) {
+	.SHK-heads {
+		padding: 4rem 2rem;
+	}
+
+	.preload div {
+		height: 20%;
+	}
+
+	.preload img {
+		height: 100% !important;
+	}
 	.vision-and-mission {
-		height: 180vh !important;
+		height: 160vh !important;
 	}
 	.hero-content span {
 		font-size: 1.5rem;
