--- a/admission/admission.css
+++ b/admission/admission.css
@@ -16,6 +16,7 @@
 	width: 100%;
 	height: 65vh;
 	min-height: 386px;
+	top: var(--nav-height);
 }
 .section1::after {
 	content: "";
@@ -52,12 +53,12 @@
 	backdrop-filter: blur(5px);
 	width: 100%;
 	height: 100%;
-	background-color: rgba(219, 213, 213, 0.336);
+	background-color: rgba(255, 255, 255, 0.1);
 	z-index: 0;
 }
 .application
 {
-	background: url(./img/br1.jpeg);
+	background: url(./img/br1.jpeg) center/cover;
 	position: relative;
 
 }
