--- a/home/home.css
+++ b/home/home.css
@@ -642,7 +642,7 @@
 
 @media (max-width: 650px) {
 	.vision-and-mission {
-		height: 110vh !important;
+		height: 120vh !important;
 	}
 	.vision {
 		width: 100% !important;
@@ -902,7 +902,7 @@
 
 @media (max-width: 500px) {
 	.vision-and-mission {
-		height: 120vh !important;
+		height: 135vh !important;
 	}
 	.slide-h1 {
 		top: 50%;
@@ -917,7 +917,7 @@
 
 @media (max-width: 450px) {
 	.vision-and-mission {
-		height: 124vh !important;
+		height: 140vh !important;
 	}
 	.hero {
 		background: url(https://media.architecturaldigest.com/photos/5988e603298aae66974b2d0d/2:1/w_3000,h_1500,c_limit/Pilotless%20Airplanes%201.jpg);
@@ -925,8 +925,11 @@
 		background-position: -29rem 0;
 	}
 }
-
-
+@media (max-width: 430px) {
+	.vision-and-mission {
+		height: 160vh !important;
+	}
+}
 @media (max-width: 400px) {
 	.SHK-heads {
 		padding: 4rem 2rem;
@@ -956,19 +959,37 @@
 	}
 }
 
+@media (max-width: 370px) {
+	.vision-and-mission {
+		height: 185vh !important;
+	}
+}
+
 @media (max-width: 350px) {
 	.vision-and-mission {
-		height: 230vh !important;
+		height: 185vh !important;
+	}
+}
+
+@media (max-width: 330px) {
+	.vision-and-mission {
+		height: 200vh !important;
 	}
 }
 
 @media (max-width: 320px) {
-	/* .vision-and-mission {
+	.vision-and-mission {
 		height: 205vh !important;
-	} */
+	}
 }
 
+@media (max-width: 315px) {
+	.vision-and-mission {
+		height: 215vh !important;
+	}
+}
 
+/* 
 @media (max-width: 650px) {
 	.trying
 	{
@@ -983,4 +1004,4 @@
 	{
 		position: relative;
 	}
-}
+} */
