--- a/admission/admission.css
+++ b/admission/admission.css
@@ -1,10 +1,8 @@
-*
-{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
+* {
+	margin: 0%;
+	padding: 0%;
+	box-sizing: border-box;
 }
-
 
 .section1 {
 	position: relative;
@@ -19,14 +17,14 @@
 	top: var(--nav-height);
 }
 .section1::after {
-	content: "";
+	content: '';
 	position: absolute;
 	top: 0;
 	left: 0;
 	height: 100%;
 	width: 100%;
 	background: rgba(255, 255, 255, 0.048);
-	
+
 	z-index: 0;
 }
 
@@ -39,14 +37,12 @@
 	z-index: 2;
 }
 
-::placeholder
-{
+::placeholder {
 	text-align: center;
 }
 
-.application::after
-{
-	content: "";
+.application::after {
+	content: '';
 	top: 0;
 	left: 0;
 	position: absolute;
@@ -56,15 +52,12 @@
 	background-color: rgba(255, 255, 255, 0.1);
 	z-index: 0;
 }
-.application
-{
+.application {
 	background: url(./img/br1.jpeg) center/cover;
 	position: relative;
-
 }
 
-.application-form
-{
+.application-form {
 	margin: 5% 18%;
 	overflow: hidden;
 	display: flex;
@@ -75,111 +68,104 @@
 	flex-direction: column;
 	border-radius: 1.5%;
 }
-.flex
-{
+.flex {
 	display: flex;
 	flex-direction: column;
 	margin: 1%;
 	z-index: 1;
 }
 
-label
-{
+label {
 	padding-bottom: 1%;
 	color: rgb(0, 0, 0);
 	font-size: 20px;
 	color: rgb(0, 0, 0);
 	z-index: 1;
 }
-input
-{
+input {
 	border: 1px solid rgb(143, 140, 140);
 	/* box-shadow: 2px 5px 10px rgb(143, 140, 140); */
 	border-radius: 7px;
 }
-option
-{
+option {
 	border-radius: 7px;
 	background-color: rgb(213, 214, 211);
 	color: rgb(0, 0, 0);
 }
 
-.height
-{
+.height {
 	border: 1px solid rgb(143, 140, 140);
 	/* box-shadow: 2px 5px 10px rgb(143, 140, 140); */
 	font-size: 18px;
 	border-radius: 7px;
 }
-.input-css
-{
-	border: 1px solid rgb(143, 140, 140);
+.input-css {
+	border: none;
 	border-radius: 7px;
-	height: 30px;
+	height: 40px;
 }
 
-.checkbox
-{
+.checkbox {
 	text-align: center;
 	z-index: 1;
 	padding-top: 3%;
 }
-.flex input 
-{
-	height: 30px;
+.flex input {
+    height: 40px;
+    border: none;
+    box-shadow: 2px 2px 10px rgb(255 255 255 / 10%), -2px -2px 10px rgb(255 255 255 / 10%);
 }
 
-.form-group input
-{
+.form-group input {
 	width: 19.55%;
 }
-.height
-{
+.height {
 	width: 50px;
 }
-.flex .gender input
-{
+.flex .gender input {
 	height: 14px;
 	box-shadow: none;
 	margin: 12px 15px;
 }
-.submit
-{
+.submit {
 	display: flex;
 	align-items: center;
 	z-index: 1;
 	justify-content: center;
 }
-.submit-btn
-{
+.submit-btn {
 	padding: 10px;
 	margin-top: 3%;
 	background-color: rgb(32, 113, 219);
 	color: #fff;
-
 }
 
-
-.images
-{
+.images {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
 
-.images h2
-{
+.images h2 {
 	font-size: 50px;
 	padding: 2%;
 }
 
-
-
-.download
-{
+.download {
 	padding: 1%;
 	text-decoration: none;
 	color: #fff;
 	background-color: rgb(32, 113, 219);
+}
+ 
+.small-input{
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	margin-top: 2rem;
+}
+
+.small-input input {
+width: 23%;
 }
