--- a/about/about.css
+++ b/about/about.css
@@ -13,6 +13,7 @@
 	background-attachment: fixed;
 	width: 100%;
 	height: 65vh;
+	top: var(--nav-height);
 	min-height: 386px;
 }
 
@@ -37,11 +38,16 @@
 	z-index: 2;
 }
 
+.footer {
+	top: 0;
+}
+
 .content-top
 {
 	padding: 9%;
 	font-size: 25px;
 	text-align: justify;
+	top: var(--nav-height);
 	background: url(./img/bg1.jpg) center/cover;
 	position: relative;
 }
