--- a/common/nav/nav.css
+++ b/common/nav/nav.css
@@ -206,9 +206,17 @@ header {
 	header.side-bar .bottom-nav {
 		transform: translateX(0);
 	}
+	ul
+	{
+		height: calc(100vh - 4.3rem) !important;
+	}
 }
 @media (max-width:800px){
 	.bottom-nav {
 		padding: 0;
+	}
+	ul
+	{
+		height: calc(100vh - 4.3rem) !important;
 	}
 }
