--- a/placements/placement.css
+++ b/placements/placement.css
@@ -1,9 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
 .placements {
   background-color: white !important;
 }
@@ -20,6 +14,8 @@
   justify-content: center;
   align-items: center;
   background: rgb(236, 234, 234);
+  top: var(--nav-height);
+  position: relative;
 }
 
 .section0div {
@@ -56,6 +52,7 @@
   width: 100%;
   height: 60vh;
   min-height: 386px;
+  top: var(--nav-height);
 }
 
 .section1::after {
@@ -69,6 +66,7 @@
   /* background: -webkit-linear-gradient(rgba(29, 38, 113, 0.4), rgba(195, 55, 100, 0.4)); */
   background: rgba(0, 0, 0, 0.7);
   z-index: 0;
+  
 }
 
 .title {
@@ -88,13 +86,14 @@
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  top: var(--nav-height);
 }
 
 .section3 h1 {
   position: absolute;
   bottom: 40%;
   font-size: 45px;
-  z-index: 5;
+  z-index: 4;
   left: 50%;
   transform: translatex(-50%);
 }
@@ -104,6 +103,7 @@
   height: 23vh;
   position: relative;
   background: rgb(236, 234, 234);
+  top: var(--nav-height);
 }
 
 .section3 img {
@@ -114,12 +114,15 @@
 }
 
 .section4 {
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   overflow: hidden;
   background: rgb(236, 234, 234);
+  top: var(--nav-height);
+  padding-bottom: 20%;
 }
 
 #div {
